@@ -22,13 +22,13 @@ IPV6_EXT_HDRS=0
 UDP
 UDP_SRC_PORT=546
 UDP_DST_PORT=547
-UDP_LEN=53
+UDP_LEN=65
 UDP_CHECKSUM=-1
 UDP_DATA=DHCPV6
 
 DHCP6_MSG_TYPE=1
 DHCP6_TRANS_ID=0x123
-DHCP6_OP_NUM=5
+DHCP6_OP_NUM=6
 
 DHCP6_OP_CODE=1
 DHCP6_OP_LEN=6
@@ -55,3 +55,8 @@ DHCP6_OP_CODE=8
 DHCP6_OP_LEN=2
 DHCP6_OPTION=DHCP6_OP_ELAPSED_TIME
 DHCP6_OP_ELAPSED_TIME=0xaaa
+
+DHCP6_OP_CODE=12
+DHCP6_OP_LEN=16
+DHCP6_OPTION=DHCP6_OP_SERVER_UNICAST
+DHCP6_OP_SER_UNICAST_ADDR=fe80::23
